# Mock_Server_Rocket

./: Cargo.toml  README.md
public/html/: index.html
public/html/components/: base.html
src/: main.rs  state.rs
src/api/: current_state.rs  mod.rs  response_body.rs  response_state.rs
src/routes/: mod.rs  post.rs  put.rs
