[package]
name = "mock_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_rocket = "0.12.0"
chrono = "0.4.34"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
